fix: change background to have better focus outline contrast

--- a/src/app/shared/components/mediaelement-player/mediaelement-player.component.scss
+++ b/src/app/shared/components/mediaelement-player/mediaelement-player.component.scss
@@ -67,6 +67,6 @@
 
   // better contrast
   .mejs__controls:not([style*="display: none"]) {
-    background: $primary;
+    background: $dark-gray;
   }
 }
